fixed >java 8 methods used in BreakLoopSugarApplicator and JumpSugarApplicator